--- a/Clients/templates/Login.html
+++ b/Clients/templates/Login.html
@@ -3,13 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Tel Update</title>
+
           <!-- This is a Bootstarp -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home Page</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Signup">Sign Up</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Login</a>
+      </li>
+    </ul>
+    <p></p>
+    <p></p>
+    <p></p>
       <div class="container d-flex justify-content-center align-items-center">
-
         <form class="d-flex flex-column" method="POST">
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Username</label>
@@ -23,7 +36,6 @@
 
             <button type="submit" class="btn btn-danger">כניסה</button>
         </form>
-
       </div>
 
 
