--- a/Clients/templates/Login.html
+++ b/Clients/templates/Login.html
@@ -25,16 +25,16 @@
       <div class="container d-flex justify-content-center align-items-center">
         <form class="d-flex flex-column" method="POST">
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Username</label>
+                <label for="Username" class="form-label">Username</label>
                 <input type="text" class="form-control" name="Username" id="Username">
             </div>
 
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Password</label>
+                <label for="Password" class="form-label">Password</label>
                 <input type="password" class="form-control" name="Password" id="Password">
             </div>
 
-            <button type="submit" class="btn btn-danger">כניסה</button>
+            <button type="submit" class="btn btn-danger">Login</button>
         </form>
       </div>
 
