--- a/Clients/templates/TraineeSignup.html
+++ b/Clients/templates/TraineeSignup.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+
     <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link" href="/">Home Page</a>
@@ -22,6 +23,63 @@
         </li>
     </ul>
 
+    <br>
+    <p style="font-size: 50px; text-align: center; margin-right: 900px;">Sign Up as a Trainee</p>
+    <br>
+
+    <div class="container text-center">
+      <form class="d-flex flex-column" method="POST">
+          <div class="row">
+            <div class="col">
+              <br>
+              <div class="input-group mb-3">
+                 <div class="input-group mb-3">
+                  <label class="input-group-text" for="Workouts">Workouts</label>
+                  <select class="form-select" id="Workouts">
+                    <option selected>Workouts in a week</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                  </select>
+                </div>
+
+                  <label class="input-group-text" for="Level">Level</label>
+                  <select class="form-select" id="Level">
+                    <option selected>Choose Level</option>
+                    <option value="1">Beginner</option>
+                    <option value="2">Regular Trainee</option>
+                    <option value="3">Professional</option>
+                    <option value="4">Master</option>
+                    <option value="5">Ninja</option>
+                  </select>
+                </div>
+
+                <a class="btn btn-danger" href="/Signup/Trainee/Level" role="button">What Is My Level?</a>
+
+
+              </div>
+            <div class="col">
+
+            </div>
+            <div class="col" style="text-align: left;">
+               <div class="mb-3">
+                  <label for="Username" class="form-label">Username</label>
+                  <input type="email" class="form-control" id="Username" placeholder="Enter first and last name">
+               </div>
+              <label for="inputPassword" class="form-label">Password</label>
+              <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpBlock">
+              <div id="passwordHelpBlock" class="form-text">
+                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+              </div>
+            </div>
+          </div>
+        <br>
+        <div style="text-align: center;">
+            <button type="submit" class="btn btn-primary">Sign Up</button>
+        </div>
+      <form>
+    <div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
