--- a/Clients/templates/Level.html
+++ b/Clients/templates/Level.html
@@ -19,13 +19,65 @@
             <a class="nav-link" href="/Login">Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Signup/Trainee">Trainee Sign Up</a>
-        </li>
-        <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">What Is My Level?</a>
         </li>
     </ul>
-
+    <br><br><br><br><br><br>
+    <table class="table caption-top" style="font-size: 40px; text-align: center;">
+        <caption style="text-align: center; font-size:40px;">What Is My Level?</caption>
+      <thead>
+        <tr>
+          <th scope="col">Level</th>
+          <th scope="col">Pull-Ups</th>
+          <th scope="col">Deadhang</th>
+          <th scope="col">Lashe</th>
+          <th scope="col">Spining Bar Deadhang</th>
+          <th scope="col">One Arm Pull-Ups</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Beginner</th>
+          <td>5 or less</td>
+          <td>60 seconds or less</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th scope="row">Regular Trainee</th>
+          <td>5-20</td>
+          <td>More than 60 seconds</td>
+          <td>2 meters</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th scope="row">Professional</th>
+          <td>More than 20</td>
+          <td>More than 180 seconds</td>
+          <td>3 meters</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th scope="row">Master</th>
+          <td>More than 20</td>
+          <td>More than 180 seconds</td>
+          <td>3.5 meters</td>
+          <td>100 seconds</td>
+          <td>1-2</td>
+        </tr>
+        <tr>
+          <th scope="row">Ninja</th>
+          <td>More than 20</td>
+          <td>More than 180 seconds</td>
+          <td>4 meters</td>
+          <td>150 seconds</td>
+          <td>More then 3</td>
+        </tr>
+      </tbody>
+    </table>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
