--- a/Clients/templates/Login.html
+++ b/Clients/templates/Login.html
@@ -37,8 +37,16 @@
             <button type="submit" class="btn btn-danger">Login</button>
         </form>
       </div>
-
-
+    <br><br>
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          <ul class="flashes" style="font-size: 30px; list-style-type: none; text-align: center;">
+          {% for message in messages %}
+              <li style="font-size: 30px; text-align: center;">{{ message }}</li>
+          {% endfor %}
+          </ul>
+      {% endif %}
+      {% endwith %}
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
