--- a/Clients/templates/TrainersRequests.html
+++ b/Clients/templates/TrainersRequests.html
@@ -9,7 +9,7 @@
 <body>
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Home Page</a>
+        <a class="nav-link" href="/GymManager/{{ username }}">Home Page</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/GymManager/TrainingSchedule/{{ username }}">Training Schedule</a>
@@ -18,7 +18,7 @@
         <a class="nav-link" href="/GymManager/UsersData/{{ username }}">Trainers and Trainees data</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/GymManager/TrainersRequests/{{ username }}">Trainers Requests</a>
+        <a class="nav-link active" aria-current="page" href="#">Trainers Requests</a>
       </li>
     </ul>
 
@@ -31,6 +31,24 @@
           </ul>
       {% endif %}
       {% endwith %}
+
+    <div style="font-size: 60px; text-align: center; margin-right: 1800px">
+      <p>Pending requests:</p>
+    </div>
+    <br><br>
+    {% for request in requests %}
+    <div style="margin-bottom: 20px; text-align: center; margin-right: 1300px;">
+
+      <p>
+        Trainer Name: {{ request.split(':')[0] }}<br>
+        Level: {{ request.split(':')[1] }}
+      </p>
+
+      <button>Approve</button> <button>Deny</button>
+
+        <br><br>
+    </div>
+    {% endfor %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
