--- a/Clients/templates/TrainingSchedule.html
+++ b/Clients/templates/TrainingSchedule.html
@@ -9,10 +9,10 @@
 <body>
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Home Page</a>
+        <a class="nav-link" href="/GymManager/{{ username }}">Home Page</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/GymManager/TrainingSchedule/{{ username }}">Training Schedule</a>
+        <a class="nav-link active"  aria-current="page" href="#">Training Schedule</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/GymManager/UsersData/{{ username }}">Trainers and Trainees data</a>
