--- a/Clients/templates/UsersData.html
+++ b/Clients/templates/UsersData.html
@@ -9,13 +9,13 @@
 <body>
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Home Page</a>
+        <a class="nav-link" href="/GymManager/{{ username }}">Home Page</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/GymManager/TrainingSchedule/{{ username }}">Training Schedule</a>
+        <a class="nav-link"  href="/GymManager/TrainingSchedule/{{ username }}">Training Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/GymManager/UsersData/{{ username }}">Trainers and Trainees data</a>
+        <a class="nav-link active" aria-current="page" href="#">Trainers and Trainees data</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/GymManager/TrainersRequests/{{ username }}">Trainers Requests</a>
