--- a/Clients/templates/TrainingSchedule.html
+++ b/Clients/templates/TrainingSchedule.html
@@ -32,6 +32,97 @@
       {% endif %}
       {% endwith %}
 
+    <br><br><br><br>
+    <table class="table caption-top" style="font-size: 20px; text-align: center; width: 80%; margin: 0 auto;">
+        <caption style="text-align: center; font-size:40px;">Training Week</caption>
+      <thead>
+
+        <tr>
+          <th scope="col"></th>
+          <th scope="col">Sunday</th>
+          <th scope="col">Monday</th>
+          <th scope="col">Tuesday</th>
+          <th scope="col">Wednesday</th>
+          <th scope="col">Thursday</th>
+          <th scope="col">Friday</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">13:00-14:00</th>
+          <td>5 or less</td>
+          <td>60 seconds or less</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th scope="row">14:00-15:00</th>
+          <td>5-20</td>
+          <td>More than 60 seconds</td>
+          <td>2 meters</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th scope="row">15:00-16:00</th>
+          <td>More than 20</td>
+          <td>More than 180 seconds</td>
+          <td>3 meters</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th scope="row">16:00-17:00</th>
+          <td>More than 20</td>
+          <td>More than 180 seconds</td>
+          <td>3.5 meters</td>
+          <td>100 seconds</td>
+          <td>1-2</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th scope="row">17:00-18:00</th>
+          <td>More than 20</td>
+          <td>More than 180 seconds</td>
+          <td>4 meters</td>
+          <td>150 seconds</td>
+          <td>More then 3</td>
+          <td>0</td>
+        </tr>
+      <tr>
+          <th scope="row">18:00-19:00</th>
+          <td>More than 20</td>
+          <td>More than 180 seconds</td>
+          <td>4 meters</td>
+          <td>150 seconds</td>
+          <td>More then 3</td>
+          <td>0</td>
+        </tr>
+      <tr>
+          <th scope="row">19:00-20:00</th>
+          <td>More than 20</td>
+          <td>More than 180 seconds</td>
+          <td>4 meters</td>
+          <td>150 seconds</td>
+          <td>More then 3</td>
+          <td>0</td>
+        </tr>
+       <tr>
+          <th scope="row">20:00-21:00</th>
+          <td>More than 20</td>
+          <td>More than 180 seconds</td>
+          <td>4 meters</td>
+          <td>150 seconds</td>
+          <td>More then 3</td>
+          <td>0</td>
+        </tr>
+      </tbody>
+    </table>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
