--- a/Clients/templates/TrainersRequests.html
+++ b/Clients/templates/TrainersRequests.html
@@ -36,6 +36,7 @@
       <p>Pending requests:</p>
     </div>
     <br><br>
+    {% if requests %}
     {% for request in requests %}
     <div class="d-flex justify-content-center">
 
@@ -55,6 +56,14 @@
 
     </div>
     {% endfor %}
+    {% endif %}
+
+    {% if not_pending == 1 %}
+    <br><br><br>
+    <div style="font-size: 30px; text-align: center;">
+      <p>No Pending Requests</p>
+    </div>
+    {% endif %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
