--- a/Clients/templates/ManagerTrainingSchedule.html
+++ b/Clients/templates/ManagerTrainingSchedule.html
@@ -41,18 +41,18 @@
 
         <tr>
           <th scope="col"></th>
-          <th scope="col">Sunday</th>
-          <th scope="col">Monday</th>
-          <th scope="col">Tuesday</th>
-          <th scope="col">Wednesday</th>
-          <th scope="col">Thursday</th>
-          <th scope="col">Friday</th>
+          <th scope="col">Sunday, {{ training_week[0].get_date() }}</th>
+          <th scope="col">Monday, {{ training_week[8].get_date() }}</th>
+          <th scope="col">Tuesday, {{ training_week[16].get_date() }}</th>
+          <th scope="col">Wednesday, {{ training_week[24].get_date() }}</th>
+          <th scope="col">Thursday, {{ training_week[32].get_date() }}</th>
+          <th scope="col">Friday {{ training_week[40].get_date() }}</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th scope="row">13:00-14:00</th>
-          <td>5 or less</td>
+          <td></td>
           <td>60 seconds or less</td>
           <td>0</td>
           <td>0</td>
