--- a/Clients/templates/UsersData.html
+++ b/Clients/templates/UsersData.html
@@ -22,6 +22,8 @@
       </li>
     </ul>
 
+    <div class="form-group">
+
     {% with messages = get_flashed_messages() %}
       {% if messages %}
           <ul class="flashes" style="font-size: 20px; list-style-type: none;">
