--- a/Clients/templates/DefaultSchedule.html
+++ b/Clients/templates/DefaultSchedule.html
@@ -197,7 +197,7 @@
                 <th scope="row">
                 <div class="input-group mb-3">
                   <label class="input-group-text" for="Trainer6">Trainer</label>
-                  <select class="form-select" id="Trainer6" name="Level6">
+                  <select class="form-select" id="Trainer6" name="Trainer6">
                     <option selected>Choose...</option>
                             {% for trainer in trainers %}
                             <option value="{{ loop.index }}">{{ trainer }}</option>
@@ -207,7 +207,7 @@
 
                 <div class="input-group mb-3">
                   <label class="input-group-text" for="Level6">Level</label>
-                  <select class="form-select" id="Level6" name="Trainer6">
+                  <select class="form-select" id="Level6" name="Level6">
                         <option selected>Choose Workout Level</option>
                         <option value="Beginner">Beginner</option>
                         <option value="Regular Trainee">Regular Trainee</option>
@@ -349,7 +349,7 @@
 
                 <div class="input-group mb-3">
                   <label class="input-group-text" for="Level11">Level</label>
-                  <select class="form-select" id="Level11" name="Leve11">
+                  <select class="form-select" id="Level11" name="Level11">
                         <option selected>Choose Workout Level</option>
                         <option value="Beginner">Beginner</option>
                         <option value="Regular Trainee">Regular Trainee</option>
