--- a/Clients/templates/TrainerFlask.html
+++ b/Clients/templates/TrainerFlask.html
@@ -7,6 +7,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Home Page</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Trainer/TrainerTrainingSchedule/{{ username }}">Training Schedule</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Trainer/TrainerWorkoutsData/{{ username }}">Workouts Data</a>
+      </li>
+    </ul>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          <ul class="flashes" style="font-size: 20px; list-style-type: none;">
+          {% for message in messages %}
+              <li style="font-size: 30px; text-align: left;">{{ message }}</li>
+          {% endfor %}
+          </ul>
+      {% endif %}
+      {% endwith %}
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
