--- a/Clients/templates/TraineeWorkoutsData.html
+++ b/Clients/templates/TraineeWorkoutsData.html
@@ -19,15 +19,36 @@
       </li>
     </ul>
 
+    <br><br>
     {% with messages = get_flashed_messages() %}
-      {% if messages %}
-          <ul class="flashes" style="font-size: 20px; list-style-type: none;">
-          {% for message in messages %}
-              <li style="font-size: 30px; text-align: left;">{{ message }}</li>
-          {% endfor %}
-          </ul>
-      {% endif %}
-      {% endwith %}
+        <p style="text-align: center; font-size:40px;">Workout Updates</p><br>
+        <p style="text-align: center; font-size:35px;">Current Level : {{ messages[0] }}</p>
+    {% endwith %}
+
+    <table class="table caption-top" style="font-size: 20px; text-align: center; width: 80%; margin: 0 auto;">
+      <thead class="table-light">
+        <tr>
+                  <th scope="col">Date</th>
+                  <th scope="col">Pull-Ups</th>
+                  <th scope="col">One-Arm-Pull-Ups</th>
+                  <th scope="col">Deadhang (seconds)</th>
+                  <th scope="col">Spinning-Bar-Deadhang (seconds)</th>
+                  <th scope="col">Lashe (meters)</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for update in trainee_updates %}
+            <tr>
+                <th scope="col">{{update.get_date()}}</th>
+                <th scope="col">{{update.get_pullups()}}</th>
+                <th scope="col">{{update.get_one_arm_pullups()}}</th>
+                <th scope="col">{{update.get_deadhang()}}</th>
+                <th scope="col">{{update.get_spinning_bar_deadhang()}}</th>
+                <th scope="col">{{update.get_lashe()}}</th>
+            </tr>
+        {% endfor %}
+      </tbody>
+    </table>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
