--- a/Clients/templates/TraineeFlask.html
+++ b/Clients/templates/TraineeFlask.html
@@ -18,6 +18,11 @@
         <a class="nav-link" href="/Trainee/TraineeWorkoutsData/{{ username }}">Workouts Data</a>
       </li>
     </ul>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Logout</a>
+      </li>
+    </ul>
 
     {% with messages = get_flashed_messages() %}
       {% if messages %}
