--- a/Clients/templates/TrainerTrainingSchedule.html
+++ b/Clients/templates/TrainerTrainingSchedule.html
@@ -18,6 +18,11 @@
         <a class="nav-link" href="/Trainer/TrainerWorkoutsData/{{ username }}">Workouts Data</a>
       </li>
     </ul>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Logout</a>
+      </li>
+    </ul>
     <form class="d-flex flex-column" method="POST">
             <br><br><br><br>
             <table class="table caption-top" style="font-size: 20px; text-align: center; width: 80%; margin: 0 auto;">
