--- a/Clients/templates/UsersData.html
+++ b/Clients/templates/UsersData.html
@@ -21,6 +21,11 @@
         <a class="nav-link" href="/GymManager/TrainersRequests/{{ username }}">Trainers Requests</a>
       </li>
     </ul>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Logout</a>
+      </li>
+    </ul>
 
     <div class="form-group">
 
