--- a/Clients/templates/TraineeWorkoutsData.html
+++ b/Clients/templates/TraineeWorkoutsData.html
@@ -18,6 +18,11 @@
         <a class="nav-link active" aria-current="page" href="#">Workouts Data</a>
       </li>
     </ul>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Logout</a>
+      </li>
+    </ul>
 
     <br><br>
     {% with messages = get_flashed_messages() %}
@@ -49,7 +54,8 @@
         {% endfor %}
       </tbody>
     </table>
-
+    <br><br>
+    <a class="nav-link" style="font-size: 30px; text-align: center;" href="/Trainee/TraineeWorkoutsData/AddUpdate/{{ username }}">New Update</a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
