--- a/Clients/templates/TraineesData.html
+++ b/Clients/templates/TraineesData.html
@@ -9,16 +9,13 @@
 <body>
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link" href="/GymManager/{{ username }}">Home Page</a>
+        <a class="nav-link" href="/Trainer/{{ username }}">Home Page</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  href="/GymManager/ManagerTrainingSchedule/{{ username }}">Training Schedule</a>
+        <a class="nav-link" href="/Trainer/TrainerTrainingSchedule/{{ username }}">Training Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Trainers and Trainees data</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/GymManager/TrainersRequests/{{ username }}">Trainers Requests</a>
+        <a class="nav-link active" aria-current="page" href="#">Trainees Data</a>
       </li>
     </ul>
     <ul class="nav justify-content-end">
