--- a/Clients/templates/TrainerFlask.html
+++ b/Clients/templates/TrainerFlask.html
@@ -15,7 +15,7 @@
         <a class="nav-link" href="/Trainer/TrainerTrainingSchedule/{{ username }}">Training Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Trainer/TrainerWorkoutsData/{{ username }}">Workouts Data</a>
+        <a class="nav-link" href="/Trainer/TrainerWorkoutsData/{{ username }}">Trainees Data</a>
       </li>
     </ul>
     <ul class="nav justify-content-end">
