--- a/Clients/templates/TrainerTrainingSchedule.html
+++ b/Clients/templates/TrainerTrainingSchedule.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-        <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs">
       <li class="nav-item">
         <a class="nav-link" href="/Trainer/{{ username }}">Home Page</a>
       </li>
@@ -15,7 +15,7 @@
          <a class="nav-link active" aria-current="page" href="#">Training Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Trainer/TrainerWorkoutsData/{{ username }}">Workouts Data</a>
+        <a class="nav-link" href="/Trainer/TrainerWorkoutsData/{{ username }}">Trainees Data</a>
       </li>
     </ul>
     <ul class="nav justify-content-end">
