--- a/Clients/templates/TraineesData.html
+++ b/Clients/templates/TraineesData.html
@@ -36,7 +36,7 @@
       {% endif %}
       {% endwith %}
     </div>
-
+    <p style="text-align: center; font-size:40px;">Trainees Data</p><br>
     <table class="table caption-top" style="font-size: 20px; text-align: center; width: 35%; margin: 0 auto;">
       <thead class="table-light">
         <tr>
