--- a/Clients/templates/TraineeData.html
+++ b/Clients/templates/TraineeData.html
@@ -7,23 +7,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
   <body>
-      <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link" href="/GymManager/{{ username }}">Home Page</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"  href="/GymManager/ManagerTrainingSchedule/{{ username }}">Training Schedule</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/GymManager/UsersData/{{ username }}">Trainers and Trainees data</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">{{ user }}'s Progression</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/GymManager/TrainersRequests/{{ username }}">Trainers Requests</a>
-        </li>
-      </ul>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link" href="/Trainer/{{ username }}">Home Page</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Trainer/TrainerTrainingSchedule/{{ username }}">Training Schedule</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Trainer/TrainerWorkoutsData/{{ username }}">Trainees Data</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">{{ user }}'s Progression</a>
+      </li>
+    </ul>
       <ul class="nav justify-content-end">
         <li class="nav-item">
           <a class="nav-link" href="/">Logout</a>
