--- a/Clients/templates/ManagerTrainingSchedule.html
+++ b/Clients/templates/ManagerTrainingSchedule.html
@@ -62,83 +62,107 @@
                         Level :  {{ training_week[i].get_level() }}<br>
                         Trainees :  {{ training_week[i].get_trainees_list() }}<br>
                         Max Number Of Trainees :  {{ training_week[i].get_max_trainees() }}<br>
+                        {% if  training_week[i].get_pending() == True %}
+                            <button type="submit" class="btn btn-primary" name="button" value="button{{ i }}">Cancel Workout</button>
+                        {% endif %}
                     </td>
                     {% endfor %}
                 </tr>
         <tr>
-                    <th scope="row">13:00-14:00</th>
+                    <th scope="row">14:00-15:00</th>
                     {% for i in range(1, 42, 8) %}
                     <td>
                         Trainer :  {{ training_week[i].get_trainer() }}<br>
                         Level :  {{ training_week[i].get_level() }}<br>
                         Trainees :  {{ training_week[i].get_trainees_list() }}<br>
                         Max Number Of Trainees :  {{ training_week[i].get_max_trainees() }}<br>
+                        {% if  training_week[i].get_pending() == True %}
+                            <button type="submit" class="btn btn-primary" name="button" value="button{{ i }}">Cancel Workout</button>
+                        {% endif %}
                     </td>
                     {% endfor %}
                 </tr>
         <tr>
-                    <th scope="row">13:00-14:00</th>
+                    <th scope="row">15:00-16:00</th>
                     {% for i in range(2, 43, 8) %}
                     <td>
                         Trainer :  {{ training_week[i].get_trainer() }}<br>
                         Level :  {{ training_week[i].get_level() }}<br>
                         Trainees :  {{ training_week[i].get_trainees_list() }}<br>
                         Max Number Of Trainees :  {{ training_week[i].get_max_trainees() }}<br>
+                        {% if  training_week[i].get_pending() == True %}
+                            <button type="submit" class="btn btn-primary" name="button" value="button{{ i }}">Cancel Workout</button>
+                        {% endif %}
                     </td>
                     {% endfor %}
                 </tr>
         <tr>
-                    <th scope="row">13:00-14:00</th>
+                    <th scope="row">16:00-17:00</th>
                     {% for i in range(3, 44, 8) %}
                     <td>
                         Trainer :  {{ training_week[i].get_trainer() }}<br>
                         Level :  {{ training_week[i].get_level() }}<br>
                         Trainees :  {{ training_week[i].get_trainees_list() }}<br>
                         Max Number Of Trainees :  {{ training_week[i].get_max_trainees() }}<br>
+                        {% if  training_week[i].get_pending() == True %}
+                            <button type="submit" class="btn btn-primary" name="button" value="button{{ i }}">Cancel Workout</button>
+                        {% endif %}
                     </td>
                     {% endfor %}
                 </tr>
         <tr>
-                    <th scope="row">13:00-14:00</th>
+                    <th scope="row">17:00-18:00</th>
                     {% for i in range(4, 45, 8) %}
                     <td>
                         Trainer :  {{ training_week[i].get_trainer() }}<br>
                         Level :  {{ training_week[i].get_level() }}<br>
                         Trainees :  {{ training_week[i].get_trainees_list() }}<br>
                         Max Number Of Trainees :  {{ training_week[i].get_max_trainees() }}<br>
+                        {% if  training_week[i].get_pending() == True %}
+                            <button type="submit" class="btn btn-primary" name="button" value="button{{ i }}">Cancel Workout</button>
+                        {% endif %}
                     </td>
                     {% endfor %}
                 </tr>
         <tr>
-                    <th scope="row">13:00-14:00</th>
+                    <th scope="row">18:00-19:00</th>
                     {% for i in range(5, 46, 8) %}
                     <td>
                         Trainer :  {{ training_week[i].get_trainer() }}<br>
                         Level :  {{ training_week[i].get_level() }}<br>
                         Trainees :  {{ training_week[i].get_trainees_list() }}<br>
                         Max Number Of Trainees :  {{ training_week[i].get_max_trainees() }}<br>
+                        {% if  training_week[i].get_pending() == True %}
+                            <button type="submit" class="btn btn-primary" name="button" value="button{{ i }}">Cancel Workout</button>
+                        {% endif %}
                     </td>
                     {% endfor %}
                 </tr>
         <tr>
-                    <th scope="row">13:00-14:00</th>
+                    <th scope="row">19:00-20:00</th>
                     {% for i in range(6, 47, 8) %}
                     <td>
                         Trainer :  {{ training_week[i].get_trainer() }}<br>
                         Level :  {{ training_week[i].get_level() }}<br>
                         Trainees :  {{ training_week[i].get_trainees_list() }}<br>
                         Max Number Of Trainees :  {{ training_week[i].get_max_trainees() }}<br>
+                        {% if  training_week[i].get_pending() == True %}
+                            <button type="submit" class="btn btn-primary" name="button" value="button{{ i }}">Cancel Workout</button>
+                        {% endif %}
                     </td>
                     {% endfor %}
                 </tr>
         <tr>
-                    <th scope="row">13:00-14:00</th>
+                    <th scope="row">20:00-21:00</th>
                     {% for i in range(7, 48, 8) %}
                     <td>
                         Trainer :  {{ training_week[i].get_trainer() }}<br>
                         Level :  {{ training_week[i].get_level() }}<br>
                         Trainees :  {{ training_week[i].get_trainees_list() }}<br>
                         Max Number Of Trainees :  {{ training_week[i].get_max_trainees() }}<br>
+                        {% if  training_week[i].get_pending() == True %}
+                            <button type="submit" class="btn btn-primary" name="button" value="button{{ i }}">Cancel Workout</button>
+                        {% endif %}
                     </td>
                     {% endfor %}
                 </tr>
